# indexbot6

./: .gitignore  Cargo.toml  README.md  api.py  bot.py  build.rs  docker-static-build.sh  embed_builder.py  example.sql  maintain_tables.py  migrate.py  mutatest.ini  ping_roles.py  pyproject.toml  requirements.txt  roles.db.json  settings.py  util.py
.github/workflows/: behave.yml  coverage.yml  metatest.yml  mypy.yml  python-package-conda.yml  workflows.yml
Roles/: arma 3.txt
features/: RolesApi.feature  api.feature  embed_builder.feature  util.feature
features/steps/: api_steps.py  database.py  embed_builder_steps.py  util_steps.py
src/: api.rs  deals.rs  events.rs  game.rs  main.rs  util.rs
tests/features/: api.feature
