[package]
name = "indexbot6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10"
tqdb = "1.0.3"
thiserror = "1.0.30"
serde = "1.0.132"
serde_derive = "1.0.132"

[dev-dependencies]
mutagen = {git = "https://github.com/llogiq/mutagen"}
async-trait = "0.1"
cucumber = "0.10"
futures = "0.3"

