[package]
name = "indexbot6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = { git = "https://github.com/kangalioo/poise" }
dotenv = "0.15.0"
tqdb = "1.0.6"
thiserror = "1.0.30"
serde = "1.0.132"
serde_derive = "1.0.132"
chrono = "0.4.19"

[dev-dependencies]
mutagen = {git = "https://github.com/llogiq/mutagen"}
async-trait = "0.1"
cucumber = "0.10"
futures = "0.3"

